# Hermes_Work_Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  hermes_chat.sh  test_erp_flow.py  test_integration.py  test_kingdee_direct.py
config/: hermes-config.yaml  mcp_servers.yaml
config/prompts/: erp_system_prompt.md
config/skills/: README.md  erp_operations.yaml
data/audit/: erp_audit_2026-05-18.jsonl
docs/: LOCAL_DEV_GUIDE.md  wecom_setup_guide.md
docs/ops/: deployment-guide.md  troubleshooting-guide.md
docs/plan/: Hermes_ERP_Architecture_Plan.md
docs/tasks/phase4/: 01.md  02.md  03.md  04.md  README.md  deployment_checklist.md  high_availability_design.md  mcp_protocol_summary.md  multi_tenant_design.md  wechat_gateway_selection.md
docs/workitems/ERP集成规划/: plan.md  review.md  tasks.md  技术总监分析报告.md  整合分析报告.md  架构师分析报告.md
services/dingtalk-gateway/: Dockerfile  pyproject.toml
services/dingtalk-gateway/src/dingtalk_gateway/: __init__.py  dingtalk_client.py  main.py
services/hermes-bridge/app/: __init__.py
services/hermes-bridge/app/routers/: __init__.py  (+1 more)
services/kingdee-mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml
services/kingdee-mcp-server/src/kingdee_mcp_server/: __init__.py  audit_logger.py  cache.py  kingdee_client.py  metrics.py  server.py  skills.py
services/kingdee-mcp-server/tests/: __init__.py  test_cache.py  test_create_tool.py  test_query_tool.py  test_skills.py
services/web-ui/: app.py
services/web-ui/components/: task_runner.py
services/wechat-gateway/: .env.example  Dockerfile  README.md  pyproject.toml
services/wechat-gateway/src/wechat_gateway/: __init__.py  main.py  message_handler.py  wechat_client.py
services/wechat-gateway/tests/: test_gateway.py
tests/: test_hermes_parser.py
tests/e2e/: test_mcp_flow.py
tests/performance/: test_latency.py
(+2 files in other folders)
