[project]
name = "kingdee-mcp-server"
version = "0.1.0"
description = "MCP Server for Kingdee Cloud Galaxy ERP integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.27.1",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.19.0",
    "fastapi>=0.100.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kingdee_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"